using System.Diagnostics.CodeAnalysis;

namespace bntuapplicants_backend.Models
{
    
    public class EvaluationCriteriaGroup
    {
        public int Id { get; set; }
        public required string Name { get; set; }
    }
}
