@startuml er-diagram
' ER-диаграмма базы данных системы автоматизации приёмной комиссии.
' Логическая модель: показаны ключевые поля каждой таблицы и связи между ними.
' Чёрно-белое оформление по конвенции БНТУ.

skinparam DefaultFontName "Times New Roman"
skinparam DefaultFontSize 13
skinparam Monochrome true
skinparam Shadowing false
skinparam BackgroundColor #FFFFFF
skinparam EntityBackgroundColor #FFFFFF
skinparam ArrowColor #000000
hide circle

' === Организационная иерархия ===
entity "faculties" as faculties {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
}

entity "departments" as departments {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
  facultyid : INT <<FK>>
}

entity "specialties" as specialties {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
  departmentid : INT <<FK>>
}

' === Конкурс и приём ===
entity "competitionlists" as competitionlists {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
  plan : INT
  specialtyid : INT <<FK>>
}

entity "admissioncategories" as admissioncategories {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
  quota : INT
  priority : INT
  competitionlistid : INT <<FK>>
  evaluationcriteriagroupid : INT <<FK>>
}

' === Критерии оценивания ===
entity "evaluationcriteria" as evaluationcriteria {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
  minvalue : DECIMAL
  maxvalue : DECIMAL
  type : VARCHAR
}

entity "evaluationcriteriagroups" as evaluationcriteriagroups {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
}

entity "evaluationcriteriagroupitems" as evaluationcriteriagroupitems {
  * id : SERIAL <<PK>>
  --
  groupid : INT <<FK>>
  criteriaid : INT <<FK>>
  priority : INT
}

' === Абитуриенты ===
entity "applicants" as applicants {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR
  externalid : VARCHAR <<UQ>>
  notes : TEXT
  validated : BOOLEAN
}

entity "applicantevaluationvalues" as applicantevaluationvalues {
  * id : SERIAL <<PK>>
  --
  applicantid : INT <<FK>>
  evaluationcriteriaid : INT <<FK>>
  value : DECIMAL
}

entity "applicantadmissioncategories" as applicantadmissioncategories {
  * id : SERIAL <<PK>>
  --
  applicantid : INT <<FK>>
  admissioncategoryid : INT <<FK>>
  selectionpriority : INT
}

' === Результаты отбора ===
entity "selectedapplicants" as selectedapplicants {
  * id : SERIAL <<PK>>
  --
  applicantid : INT <<FK>>
  admissioncategoryid : INT <<FK>>
}

' === Пользователи и доступ ===
entity "users" as users {
  * id : SERIAL <<PK>>
  --
  username : VARCHAR <<UQ>>
  password_hash : VARCHAR
  role : VARCHAR
  is_active : BOOLEAN
  must_change_password : BOOLEAN
}

' === Аудит и журналирование ===
entity "audit_log" as audit_log {
  * id : BIGSERIAL <<PK>>
  --
  created_at : TIMESTAMPTZ
  user_id : INT <<FK>>
  username : VARCHAR
  action : VARCHAR
  entity_type : VARCHAR
  entity_id : VARCHAR
  changes : JSONB
}

entity "auth_log" as auth_log {
  * id : BIGSERIAL <<PK>>
  --
  created_at : TIMESTAMPTZ
  user_id : INT <<FK>>
  username : VARCHAR
  event_type : VARCHAR
  failure_reason : VARCHAR
}

entity "applicant_deletion_requests" as applicant_deletion_requests {
  * applicant_id : INT <<PK,FK>>
  --
  requested_by_user_id : INT <<FK>>
  status : VARCHAR
}

faculties ||--o{ departments
departments ||--o{ specialties
specialties ||--o{ competitionlists
competitionlists ||--o{ admissioncategories

evaluationcriteriagroups ||--o{ evaluationcriteriagroupitems
evaluationcriteria ||--o{ evaluationcriteriagroupitems
evaluationcriteriagroups ||--o{ admissioncategories

applicants ||--o{ applicantevaluationvalues
evaluationcriteria ||--o{ applicantevaluationvalues
applicants ||--o{ applicantadmissioncategories
admissioncategories ||--o{ applicantadmissioncategories
applicants ||--o{ selectedapplicants
admissioncategories ||--o{ selectedapplicants

users ||--o{ audit_log
users ||--o{ auth_log
applicants ||--|| applicant_deletion_requests
users ||--o{ applicant_deletion_requests

@enduml
